API: Implemented team routes
Implemented the first 3 routes for Team Management: Add a team to a user, Get a team of a user and Get all teams of a user
