# internal/api/routes.go
@@ -3,7 +3,6 @@ package api
 import (
 	"context"
 	"github.com/Serdok/pokemon-go/internal/api/v1/health"
-	"github.com/Serdok/pokemon-go/internal/api/v1/team"
 	"github.com/Serdok/pokemon-go/internal/controllers"
 	"github.com/Serdok/pokemon-go/internal/database"
 	"github.com/gin-gonic/gin"
@@ -15,15 +14,17 @@ func DefineRoutes(router *gin.RouterGroup, ctx context.Context, db *database.Sto
 	v1.GET("/health", health.GetHealth)
 
 	{
-		userCtl := controllers.New(ctx, db)
+		userCtl := controllers.NewUserController(ctx, db)
 		userGrp := v1.Group("user")
 		userGrp.POST("/", userCtl.Create)
 		userGrp.GET("/:uid", userCtl.Get)
 	}
 
 	{
+		teamCtl := controllers.NewTeamController(ctx, db)
 		teamGrp := v1.Group("team")
-		teamGrp.GET("/:uid", team.GetTeams)
-		teamGrp.GET("/:uid/:teamId", team.GetTeam)
+		teamGrp.POST("/:user", teamCtl.Add)
+		teamGrp.GET("/:user/:id", teamCtl.GetById)
+		teamGrp.GET("/:user", teamCtl.GetAll)
 	}
 }
